--- a/index.html
+++ b/index.html
@@ -6,7 +6,25 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>황정성 | Portfolio</title>
 	<link rel="stylesheet" href="style.css">
-	<script src="script.js"></script>
+	<script>
+		tailwind = {
+			config: {
+				theme: {
+					extend: {
+						colors: {
+							bg: '#18181b',
+							card: '#27272a',
+							accent: '#e4e4e7',
+							muted: '#a1a1aa',
+						},
+						fontFamily: {
+							sans: ['Inter', 'ui-sans-serif', 'system-ui', 'sans-serif'],
+						},
+					},
+				},
+			},
+		};
+	</script>
 	<script src="https://cdn.tailwindcss.com"></script>
 </head>
 
@@ -14,15 +32,15 @@
 
 	<header class="sticky top-0 z-50 bg-zinc-950/95 border-b border-zinc-800/50">
 		<div class="max-w-6xl mx-auto px-6 h-16 flex items-center justify-between">
-			<a class="text-lg font-bold tracking-tight hover:text-zinc-300 transition-colors" href="#top" aria-label="홈으로">
+			<a class="text-lg font-bold tracking-tight hover:text-zinc-300 transition-colors" href="#top" aria-label="홈으로" target="_blank" rel="noopener noreferrer">
 				황정성의 Portfolio
 			</a>
 			<nav class="hidden md:flex gap-8 items-center text-sm font-medium text-zinc-400">
-				<a href="#about" class="hover:text-white transition-colors">소개</a>
-				<a href="#skills" class="hover:text-white transition-colors">스킬</a>
-				<a href="#certi" class="hover:text-white transition-colors">자격증</a>
-				<a href="#projects" class="hover:text-white transition-colors">프로젝트</a>
-				<a href="#contact" class="hover:text-white transition-colors">연락</a>
+				<a href="#about" class="hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">소개</a>
+				<a href="#skills" class="hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">스킬</a>
+				<a href="#certi" class="hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">자격증</a>
+				<a href="#projects" class="hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">프로젝트</a>
+				<a href="#contact" class="hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">연락</a>
 			</nav>
 			<button id="navBtn" class="md:hidden p-2 text-zinc-400 hover:text-white border border-zinc-800 rounded-lg">
 				<span class="sr-only">메뉴 열기</span>
@@ -32,11 +50,11 @@
 	</header>
 	<div id="mobileMenu" class="hidden md:hidden fixed inset-0 z-40 bg-zinc-950 pt-20 px-6">
 		<nav class="flex flex-col gap-6 text-xl font-bold text-zinc-300">
-			<a href="#about" class="hover:text-white">소개</a>
-			<a href="#skills" class="hover:text-white">스킬</a>
-			<a href="#certi" class="hover:text-white">자격증</a>
-			<a href="#projects" class="hover:text-white">프로젝트</a>
-			<a href="#contact" class="hover:text-white">연락</a>
+			<a href="#about" class="hover:text-white" target="_blank" rel="noopener noreferrer">소개</a>
+			<a href="#skills" class="hover:text-white" target="_blank" rel="noopener noreferrer">스킬</a>
+			<a href="#certi" class="hover:text-white" target="_blank" rel="noopener noreferrer">자격증</a>
+			<a href="#projects" class="hover:text-white" target="_blank" rel="noopener noreferrer">프로젝트</a>
+			<a href="#contact" class="hover:text-white" target="_blank" rel="noopener noreferrer">연락</a>
 		</nav>
 		<button id="closeMenuBtn" class="absolute top-4 right-6 p-2 text-zinc-400 hover:text-white text-2xl">
 			✕
@@ -52,14 +70,14 @@
 						<img class="relative w-full aspect-[4/5] object-cover rounded-xl border border-zinc-800 bg-zinc-900 shadow-2xl" src="https://github.com/user-attachments/assets/83c2a379-5c7e-4bf5-9d8c-ac5c9d5a9e3e" alt="프로필 사진" />
 					</div>
 					<div class="flex gap-5 items-center justify-center w-full text-zinc-500">
-						<a href="https://github.com/HwangJeongSeong" class="hover:text-white transition-colors flex items-center gap-2 px-3 py-1.5 rounded-lg hover:bg-zinc-800/50">
+						<a href="https://github.com/HwangJeongSeong" class="hover:text-white transition-colors flex items-center gap-2 px-3 py-1.5 rounded-lg hover:bg-zinc-800/50" target="_blank" rel="noopener noreferrer">
 							<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
 								<path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd" />
 							</svg>
 							<span class="font-medium text-sm">GitHub</span>
 						</a>
 						<span class="w-0.5 h-4 bg-zinc-800"></span>
-						<a href="https://velog.io/@hjs5433629/posts" class="hover:text-white transition-colors flex items-center gap-2 px-3 py-1.5 rounded-lg hover:bg-zinc-800/50">
+						<a href="https://velog.io/@hjs5433629/posts" class="hover:text-white transition-colors flex items-center gap-2 px-3 py-1.5 rounded-lg hover:bg-zinc-800/50" target="_blank" rel="noopener noreferrer">
 							<svg class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m2 13a2 2 0 002-2V9a2 2 0 00-2-2h-2m-4-3H9M7 16h6M7 8h6v4H7V8z" />
 							</svg>
@@ -79,10 +97,10 @@
 						<span class="text-zinc-200 font-semibold">“끝까지 책임지는 개발”</span>을 지향합니다.
 					</p>
 					<div class="flex flex-wrap justify-center md:justify-start gap-4">
-						<a class="inline-flex items-center justify-center px-8 py-4 rounded-xl font-bold bg-zinc-100 text-zinc-900 hover:bg-zinc-200 transition-all text-base" href="#projects">
+						<a class="inline-flex items-center justify-center px-8 py-4 rounded-xl font-bold bg-zinc-100 text-zinc-900 hover:bg-zinc-200 transition-all text-base" href="#projects" target="_blank" rel="noopener noreferrer">
 							프로젝트 보기
 						</a>
-						<a class="inline-flex items-center justify-center px-8 py-4 rounded-xl font-bold bg-zinc-900 text-zinc-300 border border-zinc-800 hover:bg-zinc-800 hover:text-white transition-all text-base" href="#contact">
+						<a class="inline-flex items-center justify-center px-8 py-4 rounded-xl font-bold bg-zinc-900 text-zinc-300 border border-zinc-800 hover:bg-zinc-800 hover:text-white transition-all text-base" href="#contact" target="_blank" rel="noopener noreferrer">
 							연락하기
 						</a>
 					</div>
@@ -414,7 +432,7 @@
 					<p class="text-zinc-500 text-lg">Contact</p>
 				</div>
 				<div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-					<a href="mailto:hjs54336297@gmail.com" class="bg-zinc-900 border border-zinc-800 rounded-xl p-6 flex items-center gap-4 hover:border-zinc-700 transition-colors">
+					<a href="mailto:hjs54336297@gmail.com" class="bg-zinc-900 border border-zinc-800 rounded-xl p-6 flex items-center gap-4 hover:border-zinc-700 transition-colors" target="_blank" rel="noopener noreferrer">
 						<svg class="w-10 h-10 text-zinc-200 shrink-0" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" aria-hidden="true">
 							<rect x="3" y="6" width="18" height="12" rx="2" />
 							<path d="M3 7l9 6 9-6" />
@@ -424,7 +442,7 @@
 							<div class="text-zinc-500 text-sm">hjs54336297@gmail.com</div>
 						</div>
 					</a>
-					<a href="tel:+82102497611" class="bg-zinc-900 border border-zinc-800 rounded-xl p-6 flex items-center gap-4 hover:border-zinc-700 transition-colors">
+					<a href="tel:+82102497611" class="bg-zinc-900 border border-zinc-800 rounded-xl p-6 flex items-center gap-4 hover:border-zinc-700 transition-colors" target="_blank" rel="noopener noreferrer">
 						<svg class="w-10 h-10 text-zinc-200 shrink-0" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" aria-hidden="true">
 							<path d="M4 4h4l2 5-3 2a12 12 0 006 6l2-3 5 2v4a2 2 0 01-2 2C9.82 22 2 14.18 2 4a2 2 0 012-2z" />
 						</svg>
@@ -439,7 +457,7 @@
 		<footer class="py-12 border-t border-zinc-800 text-center text-sm text-zinc-500">
 			<div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-4">
 				<div>© 2025 Hwang Jeongseong</div>
-				<a class="hover:text-zinc-300 transition-colors" href="#top">맨 위로 Go</a>
+				<a class="hover:text-zinc-300 transition-colors" href="#top" target="_blank" rel="noopener noreferrer">맨 위로 Go</a>
 			</div>
 		</footer>
 		<div id="projectModal" class="hidden fixed inset-0 z-50 flex items-center justify-center px-4">
@@ -462,19 +480,19 @@
 						<p>Project description goes here...</p>
 					</div>
 					<div class="mt-8 pt-6 border-t border-zinc-800 flex gap-4">
-						<a id="modalGithub" href="#" target="_blank" class="hidden flex items-center gap-2 px-4 py-2 rounded-lg bg-zinc-800 text-zinc-200 hover:bg-zinc-700 transition-colors font-medium">
+						<a id="modalGithub" href="#" target="_blank" rel="noopener noreferrer" class="hidden flex items-center gap-2 px-4 py-2 rounded-lg bg-zinc-800 text-zinc-200 hover:bg-zinc-700 transition-colors font-medium">
 							<svg class="w-5 h-5" fill="currentColor" viewBox="0 0 24 24">
 								<path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
 							</svg>
 							GitHub
 						</a>
-						<a id="modalDocs" href="#" target="_blank" class="hidden flex items-center gap-2 px-4 py-2 rounded-lg bg-zinc-800 text-zinc-200 hover:bg-zinc-700 transition-colors font-medium">
+						<a id="modalDocs" href="#" target="_blank" rel="noopener noreferrer" class="hidden flex items-center gap-2 px-4 py-2 rounded-lg bg-zinc-800 text-zinc-200 hover:bg-zinc-700 transition-colors font-medium">
 							<svg class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
 								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
 							</svg>
 							Docs
 						</a>
-						<a id="modalDemo" href="#" target="_blank" class="hidden flex items-center gap-2 px-4 py-2 rounded-lg bg-zinc-100 text-zinc-900 hover:bg-zinc-200 transition-colors font-medium">
+						<a id="modalDemo" href="#" target="_blank" rel="noopener noreferrer" class="hidden flex items-center gap-2 px-4 py-2 rounded-lg bg-zinc-100 text-zinc-900 hover:bg-zinc-200 transition-colors font-medium">
 							Demo
 						</a>
 					</div>
@@ -482,6 +500,7 @@
 			</div>
 		</div>
 	</main>
+	<script src="script.js" defer></script>
 </body>
 
 </html>
