--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>황정성 | Portfolio</title>
 	<link rel="stylesheet" href="style.css">
 	<script>
-		tailwind = {
+		window.tailwind = {
 			config: {
 				theme: {
 					extend: {
@@ -500,7 +500,7 @@
 			</div>
 		</div>
 	</main>
-	<script src="script.js" defer></script>
+	<script src="script.js?v=2" defer></script>
 </body>
 
 </html>
