--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
 	<header class="sticky top-0 z-50 bg-zinc-950/95 border-b border-zinc-800/50">
 		<div class="max-w-6xl mx-auto px-6 h-16 flex items-center justify-between">
-			<a class="text-lg font-bold tracking-tight hover:text-zinc-300 transition-colors" href="#top" aria-label="홈으로" target="_blank" rel="noopener noreferrer">
+			<a class="text-lg font-bold tracking-tight hover:text-zinc-300 transition-colors" href="#top" aria-label="홈으로">
 				황정성의 Portfolio
 			</a>
 			<nav class="hidden md:flex gap-8 items-center text-sm font-medium text-zinc-400">
-				<a href="#about" class="hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">소개</a>
-				<a href="#skills" class="hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">스킬</a>
-				<a href="#certi" class="hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">자격증</a>
-				<a href="#projects" class="hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">프로젝트</a>
-				<a href="#contact" class="hover:text-white transition-colors" target="_blank" rel="noopener noreferrer">연락</a>
+				<a href="#about" class="hover:text-white transition-colors">소개</a>
+				<a href="#skills" class="hover:text-white transition-colors">스킬</a>
+				<a href="#certi" class="hover:text-white transition-colors">자격증</a>
+				<a href="#projects" class="hover:text-white transition-colors">프로젝트</a>
+				<a href="#contact" class="hover:text-white transition-colors">연락</a>
 			</nav>
 			<button id="navBtn" class="md:hidden p-2 text-zinc-400 hover:text-white border border-zinc-800 rounded-lg">
 				<span class="sr-only">메뉴 열기</span>
@@ -50,11 +50,11 @@
 	</header>
 	<div id="mobileMenu" class="hidden md:hidden fixed inset-0 z-40 bg-zinc-950 pt-20 px-6">
 		<nav class="flex flex-col gap-6 text-xl font-bold text-zinc-300">
-			<a href="#about" class="hover:text-white" target="_blank" rel="noopener noreferrer">소개</a>
-			<a href="#skills" class="hover:text-white" target="_blank" rel="noopener noreferrer">스킬</a>
-			<a href="#certi" class="hover:text-white" target="_blank" rel="noopener noreferrer">자격증</a>
-			<a href="#projects" class="hover:text-white" target="_blank" rel="noopener noreferrer">프로젝트</a>
-			<a href="#contact" class="hover:text-white" target="_blank" rel="noopener noreferrer">연락</a>
+			<a href="#about" class="hover:text-white">소개</a>
+			<a href="#skills" class="hover:text-white">스킬</a>
+			<a href="#certi" class="hover:text-white">자격증</a>
+			<a href="#projects" class="hover:text-white">프로젝트</a>
+			<a href="#contact" class="hover:text-white">연락</a>
 		</nav>
 		<button id="closeMenuBtn" class="absolute top-4 right-6 p-2 text-zinc-400 hover:text-white text-2xl">
 			✕
@@ -97,10 +97,10 @@
 						<span class="text-zinc-200 font-semibold">“끝까지 책임지는 개발”</span>을 지향합니다.
 					</p>
 					<div class="flex flex-wrap justify-center md:justify-start gap-4">
-						<a class="inline-flex items-center justify-center px-8 py-4 rounded-xl font-bold bg-zinc-100 text-zinc-900 hover:bg-zinc-200 transition-all text-base" href="#projects" target="_blank" rel="noopener noreferrer">
+						<a class="inline-flex items-center justify-center px-8 py-4 rounded-xl font-bold bg-zinc-100 text-zinc-900 hover:bg-zinc-200 transition-all text-base" href="#projects">
 							프로젝트 보기
 						</a>
-						<a class="inline-flex items-center justify-center px-8 py-4 rounded-xl font-bold bg-zinc-900 text-zinc-300 border border-zinc-800 hover:bg-zinc-800 hover:text-white transition-all text-base" href="#contact" target="_blank" rel="noopener noreferrer">
+						<a class="inline-flex items-center justify-center px-8 py-4 rounded-xl font-bold bg-zinc-900 text-zinc-300 border border-zinc-800 hover:bg-zinc-800 hover:text-white transition-all text-base" href="#contact">
 							연락하기
 						</a>
 					</div>
@@ -457,7 +457,7 @@
 		<footer class="py-12 border-t border-zinc-800 text-center text-sm text-zinc-500">
 			<div class="max-w-6xl mx-auto px-6 flex flex-col md:flex-row justify-between items-center gap-4">
 				<div>© 2025 Hwang Jeongseong</div>
-				<a class="hover:text-zinc-300 transition-colors" href="#top" target="_blank" rel="noopener noreferrer">맨 위로 Go</a>
+				<a class="hover:text-zinc-300 transition-colors" href="#top">맨 위로 Go</a>
 			</div>
 		</footer>
 		<div id="projectModal" class="hidden fixed inset-0 z-50 flex items-center justify-center px-4">
