--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 			<nav class="hidden md:flex gap-8 items-center text-sm font-medium text-zinc-400">
 				<a href="#about" class="hover:text-white transition-colors">소개</a>
 				<a href="#skills" class="hover:text-white transition-colors">스킬</a>
-				<a href="#certi" class="hover:text-white transition-colors">자격증</a>
 				<a href="#projects" class="hover:text-white transition-colors">프로젝트</a>
 				<a href="#contact" class="hover:text-white transition-colors">연락</a>
 			</nav>
@@ -52,7 +51,6 @@
 		<nav class="flex flex-col gap-6 text-xl font-bold text-zinc-300">
 			<a href="#about" class="hover:text-white">소개</a>
 			<a href="#skills" class="hover:text-white">스킬</a>
-			<a href="#certi" class="hover:text-white">자격증</a>
 			<a href="#projects" class="hover:text-white">프로젝트</a>
 			<a href="#contact" class="hover:text-white">연락</a>
 		</nav>
@@ -166,7 +164,7 @@
 								<li class="relative">
 									<span class="absolute -left-[37px] top-1.5 w-4 h-4 rounded-full bg-zinc-900 border-2 border-zinc-700"></span>
 									<div class="text-zinc-200 font-semibold">SBS아카데미 컴퓨터아트학원 대전점</div>
-									<div class="text-zinc-500 text-sm mt-1">풀스택 과정 수료</div>
+									<div class="text-zinc-500 text-sm mt-1">풀스택 과정 최우수 수료</div>
 								</li>
 								<li class="relative">
 									<span class="absolute -left-[37px] top-1.5 w-4 h-4 rounded-full bg-zinc-900 border-2 border-zinc-700"></span>
@@ -324,47 +322,6 @@
 						<div>
 							<div class="text-zinc-100 font-semibold">C</div>
 							<div class="text-zinc-500 text-sm">Language</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-		<section id="certi" class="py-20 border-t border-zinc-800 bg-zinc-900/30">
-			<div class="max-w-6xl mx-auto px-6">
-				<div class="mb-12">
-					<h2 class="text-3xl md:text-4xl font-bold mb-3">자격증</h2>
-					<p class="text-zinc-500 text-lg">Certification</p>
-				</div>
-				<div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-					<div class="bg-zinc-900 border border-zinc-800 rounded-xl p-6 flex items-center gap-4">
-						<svg class="w-10 h-10 text-zinc-200 shrink-0" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" aria-hidden="true">
-							<rect x="4" y="3" width="14" height="18" rx="2" />
-							<path d="M8 8h6M8 12h6" />
-							<path d="M16 14l3 1.5V20l-3-1.5L13 20v-4.5L16 14z" />
-						</svg>
-						<div>
-							<div class="text-zinc-100 font-semibold">데이터분석준전문가</div>
-							<div class="text-zinc-500 text-sm">ADsP</div>
-						</div>
-					</div>
-					<div class="bg-zinc-900 border border-zinc-800 rounded-xl p-6 flex items-center gap-4">
-						<svg class="w-10 h-10 text-zinc-200 shrink-0" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" aria-hidden="true">
-							<rect x="4" y="5" width="16" height="14" rx="2" />
-							<path d="M7 9h10M7 13h6" />
-						</svg>
-						<div>
-							<div class="text-zinc-100 font-semibold">SQLD</div>
-							<div class="text-zinc-500 text-sm">SQL 개발자</div>
-						</div>
-					</div>
-					<div class="bg-zinc-900 border border-zinc-800 rounded-xl p-6 flex items-center gap-4">
-						<svg class="w-10 h-10 text-zinc-200 shrink-0" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" aria-hidden="true">
-							<rect x="6" y="3" width="12" height="18" rx="2" />
-							<path d="M9 8h6M9 12h6M9 16h4" />
-						</svg>
-						<div>
-							<div class="text-zinc-100 font-semibold">정보처리산업기사 필기 합격</div>
-							<div class="text-zinc-500 text-sm">Written Pass</div>
 						</div>
 					</div>
 				</div>
